// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Button renders an Button 1`] = `
<div>
  <button
    class="css-1knfpf1"
    font-size="small,medium"
  >
    Click me!
  </button>
</div>
`;

exports[`components/Button renders an Button with variant prop 1`] = `
<div>
  <button
    class="css-m3rn6y"
    font-size="small,medium"
  >
    Click me!
  </button>
</div>
`;
